Ejemplo de promesas y try y catch
Ejemplo básico de como hacer promesas y try y catch para manejo de errores.

--- a/funcionesconparametros.html
+++ b/funcionesconparametros.html
@@ -6,9 +6,18 @@
 
 		var sorteo = [];
 
-		for (var i=0; i<=5; i++){
+		for (var i=0; i<=6; i++){
 			sorteo[i] = Math.round(Math.random()*100);
 		}
+
+
+		var result = sorteo.filter(function(sorteo[i], indexOf(sorteo[i])){
+			return sorteo.indexOf(sorteo[i] == indexOf(sorteo[i]));
+		}
+
+		console.log(result);
+
+
 
 								
 
